--- a/WebApplicationCrud/Views/Panel/AddProductPanel.cshtml
+++ b/WebApplicationCrud/Views/Panel/AddProductPanel.cshtml
@@ -247,7 +247,7 @@
 
                 for (let i = 0; i < this.ProductInfos.length; i++) {
                     formdata.append("productVms[" + i + "].name", this.ProductInfos[i].name)
-                    formdata.append("productVms[" + i + "].Category", this.ProductInfos[i].Caterogy)
+                    formdata.append("productVms[" + i + "].Category", this.ProductInfos[i].Category)
                     formdata.append("productVms[" + i + "].Tagnames", this.ProductInfos[i].Tagnames)
                     formdata.append("productVms[" + i + "].price", this.ProductInfos[i].price)
                     formdata.append("productVms[" + i + "].Brand", this.ProductInfos[i].Brand)
