--- a/WebApplicationCrud/Views/Home/ProductPanel.cshtml
+++ b/WebApplicationCrud/Views/Home/ProductPanel.cshtml
@@ -70,8 +70,8 @@
 
 
 
-                    <div class="col-lg-6 col-md-9">
-                        <div class="tab-content">
+                    <div class="col-lg-6 col-md-9 " >
+                        <div class="tab-content ">
 
                             @for (int i = 0; i < Model.Images.Count; i++)
                             {
@@ -80,7 +80,7 @@
                                 {
                                     <div class="tab-pane active" id="tabs-0" role="tabpanel">
                                         <div class="product__details__pic__item">
-                                            <img src="@image_path" alt="">
+                                            <img class="big_image" src="@image_path" alt="">
                                         </div>
                                     </div>
 
@@ -508,5 +508,12 @@
 
 </html>
 
-
+<script src="~/js/zoomsl.min.js"></script>
+<script type="text/javascript">
+    $(document).ready(function () {
+        $(".big_image").imagezoomsl({
+            zoomrange: [3, 3];
+        });
+    });
+</script>
 
