--- a/WebApplicationCrud/Views/Home/blog.cshtml
+++ b/WebApplicationCrud/Views/Home/blog.cshtml
@@ -52,7 +52,7 @@
                     @foreach (var post in Model.Posts)
                     {
                     <div class="blog__item">
-                        <div class="blog__item__pic set-bg" data-setbg="img/blog/BlogImages/@post.Image"></div>
+                        <div class="blog__item__pic set-bg" data-setbg="img/productAndBlogAddedImages/@post.Image"></div>
                         <div class="blog__item__text">
                             <span><img src="~/img/icon/calendar.png" alt="">@post.Created</span>
                             <h5>@post.Title</h5>
