--- a/WebApplicationCrud/Views/Panel/Index.cshtml
+++ b/WebApplicationCrud/Views/Panel/Index.cshtml
@@ -1,8 +1,8 @@
-﻿
+﻿@model PanelIndexViewModel
 <!doctype html>
 <html lang="en">
 <head>
-    <title>Sidebar 04</title>
+    <title>Sidebar 04</title>w
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700,800,900" rel="stylesheet">
