--- a/WebApplicationCrud/Views/Home/blogdetails.cshtml
+++ b/WebApplicationCrud/Views/Home/blogdetails.cshtml
@@ -37,7 +37,15 @@
             <div class="row d-flex justify-content-center">
                 <div class="col-lg-12">
                     <div class="blog__details__pic">
-                        <img src="~/img/blog/details/blog-details.jpg" alt="">
+                        @if (Model.ImageName != null)
+                        {
+                            <img src="~/img/productAndBlogAddedImages/@Model.ImageName" alt="">
+                        }
+                        else
+                        {
+                            <img src="~/img/blog/details/blog-details.jpg" alt="">
+                        }
+
                     </div>
                 </div>
                 <div class="col-lg-8">
