--- a/WebApplicationCrud/Views/Shared/_ProductListing.cshtml
+++ b/WebApplicationCrud/Views/Shared/_ProductListing.cshtml
@@ -15,14 +15,18 @@
                     <a asp-action="ProductPanel" asp-controller="Home" asp-route-id="@prod.id">
 
                         <div class="product__item__pic set-bg">
-                            @{
-                                var current = thumbnails.Where(s => s.ProductId == prod.id);
-                            }
-                            @if (current.Select(s => s.ThumbnailName).Any())
-                            {
-                                var image_path = $"/img/product/Thumbnails/{current.Select(s => s.ThumbnailName).FirstOrDefault().ToString()}";
+                          
+                                @{
+                                    string image_path="";
+                                    if (string.IsNullOrEmpty(prod.ProductInfos.Select(s => s.ProductInfoThumbnailName).FirstOrDefault()))
+                                    {
+
+
+                                        image_path = $"/img/productAndBlogAddedImages{prod.ProductInfos.Select(s => s.ProductInfoThumbnailName).FirstOrDefault()}";
+                                    }
+                                }
                                 <img src="@image_path" />
-                            }
+                            
 
                             <ul class="product__hover">
                                 <li><a href="#"><img src="../img/icon/heart.png" alt=""></a></li>
