--- a/WebApplicationCrud/Views/Panel/AddProductPanel.cshtml
+++ b/WebApplicationCrud/Views/Panel/AddProductPanel.cshtml
@@ -280,7 +280,7 @@
 
                 })
                     .then(function (response) {
-                        Alert("product was added");
+                        alert("product was added");
                     })
                     .catch(function (error) {
                         console.log(error);
